# low-resource-safety

./: .gitignore  README.md  pyproject.toml
configs/activation_sweep/: run_refusal_activation_sweep.yaml
configs/dataset/: polyrefuse.yaml
configs/extraction/: omniguard_mean_prompt.yaml  residual_multipos.yaml
configs/generation/: greedy.yaml
configs/guard_judge/: polyguard_qwen.yaml  qwen3guard_gen_8b.yaml
configs/hrl_direction/: compute_harmful_direction.yaml  compute_hrl_pooled_dim_direction.yaml  compute_hrl_pooled_direction.yaml  extract_activations.yaml
configs/intervention/: adasteer.yaml  adasteer_adapted.yaml  conditional_vhrl.yaml  directional_ablation.yaml
configs/judge/: refusal_openrouter.yaml
configs/model/: gemma-2-9b-it.yaml  llama-3.1-8b-instruct.yaml  qwen2.5-7b-instruct.yaml
configs/ood_transfer/: build_ood_paired_dataset.yaml  compute_crosslingual_subspace_transfer.yaml  compute_ood_latent_gate_transfer.yaml
configs/recoverability/: compute_lrl_fewshot_recoverability.yaml  compute_omniguard_uscore.yaml  compute_probe_method_comparison.yaml  extract_omniguard_representations.yaml
configs/refusal_gap/: generate_completions.yaml  score_guard_refusal.yaml  score_refusal.yaml
configs/routing_refusal/: compute_adapted_adasteer_vectors.yaml  evaluate_global_mmlu_utility.yaml  intervene_and_generate.yaml  run_cast_steering.yaml
scripts/activation_sweep/: results.py  run_refusal_activation_sweep.py  score_refusal_activation_sweep.py
scripts/hrl_direction/: compute_harmful_direction.py  compute_hrl_pooled_dim_direction.py  (+2 more)
(+44 files in other folders)
