[project]
name = "multilingual-latent-safety"
version = "0.1.0"
description = "Official implementation of Low-Resource Safety Failures Are Action Failures, Not Representation Failures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concept-erasure>=0.2.4",
    "datasets>=4.8.4",
    "googletrans>=4.0.2",
    "hf-transfer>=0.1.9",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "nnsight>=0.6.3",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "safetensors>=0.7.0",
    "sacrebleu>=2.5.1",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
    "nvidia-cusparselt-cu12>=0.7 ; platform_system == 'Linux'",
    "nvidia-nvshmem-cu12>=3.6 ; platform_system == 'Linux'",
    "nvidia-cudnn-cu12>=9.21 ; platform_system == 'Linux'",
    "nvidia-nccl-cu12>=2.30 ; platform_system == 'Linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multilingual_latent_safety"]
